<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pico</string>
    <string name="PicoMapsApiKey">AIzaSyCKbz6u2K6aGHpoocmCzgj3VKIqvPgHO-E</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps2">Pico</string>


    <string name="title_activity_maps">Pico</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_full_name">Full Name</string>
    <string name="prompt_number">Phone number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">This phone number  is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="button_activity_sign_up">Sign up</string>
    <string name="title_activity_ambulance_list">Ambulances List</string>
    <string name="profile">Profile</string>
    <string name="nearestHospital">Nearest hospital</string>
    <string name="logout">Logout</string>
    <string name="title_activity_profile">profile</string>
</resources>